# ba-course-materials

./: .gitignore  README.md
GAM130/01/: Expo announcement Deck REVISED.pptx
GAM130/12/: 19-20-GAM130-Forming-2nd-Year-Teams.pptx
GAM150/Lecture 02/: GAM150 -  Lecture 02 v2.pptx
GAM150/Lecture 04/: GAM150 -  Lecture 04v2.pptx
GAM150/Lecture 07/: GAM150 -  Lecture 07.pptx
GAM150/Lecture 08/: GAM150 -  Lecture 08.pptx
GAM160/01/: OOPPrinciples.tex  SRPrinciple.tex  exercises.tex  main_body.tex  sessioninfo.tex
GAM160/04/: classes.tex  exercise.tex  inheritance.tex  polymorphism.tex  sessioninfo.tex
GAM160/06/: generic_types.tex  list.tex  main_body.tex  map.tex  sorting.tex  stack.tex
GAM160/08/: main_body.tex  memory.tex  memory_management.tex  scriptable_objects.tex  sessioninfo.tex  strings.tex
GAM160/09/: main_body.tex  sessioninfo.tex
GAM240/01/: Expo announcement Deck REVISED.pptx
GAM240/03/: 19-20-GAM240-Lecture-Planning.pptx  2019-20-GAM240-Example-Burndown-Chart.xlsx  2019-20-GAM240-Marketing-Exercise.docx
GAM240/05/: 19-20 Expo - Game Standee Info - Template.psd
GAM240/11/: 19-20-GAM240-Forming-3rd-Year-Teams.pptx
GAM250/: listings_glsl.tex  main_body.tex  sessioninfo.tex
GAM250/01/: main_body.tex
GAM320/: 2019-20-gam320-module-guide.docx  ~$19-20-gam320-module-guide.docx
GAM330/: 2019-20-gam330-module-guide.docx
GAM340/: 2019-20-GAM340-module-guide.docx
GAM340/05/programming/code/00.Balls/clion/: CMakeLists.txt  simplesdl.cpp
GAM340/05/programming/code/01.sdl_printfont/app/: CMakeLists.txt  simplesdl.cpp
(+119 files in other folders)
